Added a new code in the index.html for outfit suggestion. Created a simple function in javascript to suggest outfit according to the weather. Extended the event listener for the button to display and hide the outfit suggestion evertime a new location i sentered

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,6 +110,17 @@ body {
     background-color: #d2ffd5;
 }
 
+.outfit-suggestion {
+    display: flex; 
+    justify-content: center; 
+    margin-top: 4%;
+    width: 100%;
+}
+
+.show-suggestion {
+    margin-top: 2%;
+}
+
 .col {
     width: 100px; 
   }
